--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,6 +252,15 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 
+i.icoCert {
+  position: relative;
+  top: -10px;
+  color: #9c9c9c;
+  float: right;
+  margin-right: 30px;
+  height: 16px;
+}
+
 @media (min-width: 992px) {
   #hero {
     padding-left: 160px;
